# SentinelChess

./: .gitignore  CMakeLists.txt  STUCK.CHS  SentinelChess.sln  SentinelChess.vcxproj  SentinelChess.vcxproj.filters  chessboard.cpp  chessboard.h  chesspiece.cpp  chesspiece.h  console.cpp  console.h  main.cpp
C++/: CMakeLists.txt  SentinelChess.sln  SentinelChess.vcxproj.filters
C++/SentinelConsole/: CMakeLists.txt  SentinelConsole.vcxproj  console.cpp  console.h  main.cpp  main.cpp.bak  readme.txt
C++/SentinelGodot/: BuildReadme.txt  SConstruct  SentinelGodot.code-workspace  build-dev-release.ps1  build-mingw.ps1  build-release.ps1  build.ps1  build.ps1.bak
C++/SentinelGodot/demo/: BindNode.gd  TestTemp.gd  icon.svg.import  main.tscn  project.godot
C++/SentinelGodot/src/: register_types.cpp  register_types.h  sentinelchess.cpp  sentinelchess.h  sentinelcommon.cpp  sentinelcommon.h
C++/SentinelLib/: CMakeLists.txt  CMakeLists.txt_for_inner  SentinelLib.vcxproj  SentinelLib.vcxproj.filters  chessboard.cpp  chessboard.h  chesscache.cpp  chesscache.h  chessclock.cpp  chessclock.h  chesscommon.cpp  chesscommon.h  chesscomputer.cpp  chesscomputer.h  chessconsole.cpp  chessconsole.h  chessengine.cpp  chessengine.h  chessgame.cpp  chessgame.h  chessgamelistener.cpp  chessgamelistener.h  chesshuman.cpp  chesshuman.h  chesslobby.cpp  chesslobby.h  chessmeta.cpp  chessmeta.h  chessmove.cpp  chessmove.h  chessopenings.cpp  chessopenings.h  chesspgn.cpp  chesspgn.h  chesspiece.cpp  chesspiece.h  chessplayer.cpp  chessplayer.h  chessplayerhub.cpp  chessplayerhub.h  (+6 more)
C++/test/: CMakeLists.txt  ChessBoardTest.cpp  ChessOpeningTest.cpp  ChessPGNTest.cpp  ECOTest.h  PGNTest.h  XFENTest.h  main.cpp
C++/test/TestData/PGN/: 00000002.pgn  00000003.pgn  00000004.pgn  00000005.pgn  00000006.pgn  00000007.pgn  00000008.pgn  00000009.pgn  00000010.pgn  00000011.pgn  00000012.pgn  (+88 more)
(+337 files in other folders)
